Corregir espacio después de título

--- a/docsimplepuj.org
+++ b/docsimplepuj.org
@@ -1,6 +1,6 @@
 #+author: Juan E. Gómez-Morantes, PhD
 #+title: Hoja de estilo no oficial para documentos simples de la Pontificia Universidad Javeriana usando LaTex
-#+property: header-args :tangle ./enunciadoPUJ.sty
+#+property: header-args :tangle ./docsimplepuj.sty
 
 * Introducción
 La presente hoja de estilo de LaTex tiene como objetivo tener una formato estandarizado para la generación de documentos simples (e.g. enunciados, programas de cursos, entregas por parte de estudiantes, reportes de avance, etc.) para la Pontificia Universidad Javeriana en Bogotá, Colombia.
@@ -8,7 +8,7 @@ La presente hoja de estilo de LaTex tiene como objetivo tener una formato estand
 Este archivo usa el paquete =org= de Emacs para tener un código fuente en formato de programación literaria para documentar el código de la hoja de estilo. 
 
 * Paquetes a utilizar
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \usepackage[margin=3cm]{geometry} %to define the margins
 \usepackage[export]{adjustbox} %the export option makes it load graphicx
 \usepackage{pgf} % Allows the manipulation of numeric values
@@ -25,7 +25,7 @@ Este archivo usa el paquete =org= de Emacs para tener un código fuente en forma
 * Definición de colores a usar en el documento
 Se define el azul institucional (tomado de [[https://www.javeriana.edu.co/recursosdb/813229/983106/Manual+de+Identidad+Visual+2018.pdf/bb8d2ae7-2b76-b755-f179-c0ea8337b567?t=1606514066712][manual de identidad visual]]) para títulos y encabezados de secciones. 
 
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \definecolor{azulPUJ}{RGB}{44, 86, 151}
 #+end_src
 
@@ -39,7 +39,7 @@ En adición, se usan los siguientes tamaños para los encabezados de secciones:
 
 Finalmente, se define un espacio de 0.75em después de cada párrafo.
 
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \sectionfont{\Large\sffamily\color{azulPUJ}}
 \subsectionfont{\large\sffamily\color{azulPUJ}}
 \subsubsectionfont{\normalsize\sffamily\color{azulPUJ}}
@@ -47,7 +47,7 @@ Finalmente, se define un espacio de 0.75em después de cada párrafo.
 #+end_src
 
 Se usa titlesec para reducir el espacio después de encabezados, pero conservando un espacio antes.
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \titlespacing\section{0pt}{1.2em}{0pt}
 \titlespacing\subsection{0pt}{.8em}{0pt}
 \titlespacing\subsubsection{0pt}{.5em}{0pt}
@@ -61,7 +61,7 @@ El documento cuenta con 3 niveles de título: título, subtítulo, y subsubtítu
 
 Para lograr un título que se adapte al uso opcional del subtítulo y el título, manteniendo un tamaño proporcional del logo de la universidad a la izquierda del título, se empieza con una altura de 4\baselineskip para la imagen y luego se aumenta si se definen sub o subsub título.
 
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \newtoggle{withSubtitle}
 \togglefalse{withSubtitle}
 \newtoggle{withSubsubtitle}
@@ -108,7 +108,7 @@ Para lograr un título que se adapte al uso opcional del subtítulo y el título
 ** Configuración del prefijo del autor y la fecha del documento
 Se definen los siguiente comando para configurar los prefijos del autor y la fecha del documento.
 
-#+begin_src :tangle ./enunciadoPUJ.sty
+#+begin_src tex
 \def\@prefixAuthor{Preparado por: }
 \newcommand{\prefixAuthor}[1]{
   \def\@prefixAuthor{#1}
