--- a/docsimplepuj.sty
+++ b/docsimplepuj.sty
@@ -52,7 +52,7 @@
     \setlength\arrayrulewidth{2pt}
     \arrayrulecolor{azulPUJ}
     \begin{tabular}{p{1pt}|p{1pt}l}
-      && \parbox{.7\linewidth}{\Huge\color{azulPUJ}\textbf{\@title}}\\      \iftoggle{withSubtitle}{&&\parbox{.7\linewidth}{\LARGE\color{azulPUJ}\textbf{\@subtitle}\vspace{2pt}}\\}{} \iftoggle{withSubsubtitle}{&&\parbox{.7\linewidth}{\Large\color{azulPUJ}\@subsubtitle}\\}{}
+      && \parbox{.7\linewidth}{\Huge\color{azulPUJ}\textbf{\@title}\vspace{2pt}}\\      \iftoggle{withSubtitle}{&&\parbox{.7\linewidth}{\LARGE\color{azulPUJ}\textbf{\@subtitle}\vspace{2pt}}\\}{} \iftoggle{withSubsubtitle}{&&\parbox{.7\linewidth}{\Large\color{azulPUJ}\@subsubtitle}\\}{}
       && \\
       && \\
       && \parbox{.7\linewidth}{\color{azulPUJ}\large\@prefixAuthor\@author\vspace{2pt}} \\
